# dimos_rfid

./: .env.example  .gitignore  Before running.md  README.md  SEMANTIC_LOCALIZER.md  pyproject.toml  run_semantic_rfid.py
Agent/: README.md  __init__.py  rfid_finder_agent.py
dimos_rfid/: README.md  __init__.py  __main__.py  _backend.py  agentic_skills.py  bridge.py  demo_blueprint.py  focus_filter.py  go2_agentic_blueprints.py  go2_blueprints.py  integrate_with_dimos.sh  msgs.py  pyproject.toml  recorder.py  rfid_focus.txt  rfid_module.py  rfid_overlay_module.py  rfid_rerun.py  rfid_semantic_localizer.py  rfid_tracker.py  semantic_map.py  semantic_particle_filter.py  semantic_rfid_blueprints.py
dimos_rfid/dimos_rfid.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
rfid scanner python/: RFID_API.md  RFID_SCANNER.md  minimal.py  rfid_scanner_server.py  rfid_service.py  vulcan_rfid_reader.py
rfid scanner python/templates/: rfid_scanner.html
rfid_module/: rfid_focus.txt  rfid_module.py
scripts/: find_go2_ip.sh
tests/: test_recorder.py  test_semantic_particle_filter.py
