[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dimos-rfid"
version = "0.1.0"
description = "Vulcan RFID scanner module for DimOS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "debugpy>=1.8.21",
    "dimos[base,unitree]",
    "numpy>=1.24",
    "pytest>=9.1.1",
    "requests>=2.28",
]

[project.optional-dependencies]
unitree = ["dimos[unitree]"]
robot = ["flask>=3.0", "requests>=2.28"]

[tool.setuptools.packages.find]
where = ["."]
include = ["dimos_rfid"]

[tool.uv]
default-groups = []
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]
# Linux-only DimOS deps (no Windows wheels); still installed on Linux targets.
override-dependencies = [
    "dimos-viewer; sys_platform == 'linux'",
    "pin; sys_platform == 'linux'",
    "lcm-dimos-fork; sys_platform == 'linux'",
]
