[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dimos-rfid"
version = "0.1.0"
description = "Vulcan RFID scanner module for DimOS"
requires-python = ">=3.10"
dependencies = [
    "dimos[base]",
    "requests>=2.28",
]

[project.optional-dependencies]
unitree = ["dimos[unitree]"]

[tool.setuptools.packages.find]
where = ["."]
include = ["dimos_rfid*"]
